--- a/assignment-05/README
+++ b/assignment-05/README
@@ -1,3 +1,4 @@
 1. Visit a site using The Wayback Machine, looking at a snapshot at least 10 years old. Where did you go? What did it look like? How has it changed? I looked at the University of Montana website from 2008. It looked very cluttered and was full of white space. It has changed in that the new site has a lot of burgundy and instead of list view there are a lot of icons. </p>
-2. Summarize your experience with these last few topics. What did you learn? What was difficult, easy, or still misunderstood? I enjoyed learning the coding tags. I still do not know for sure how to link and embed images properly when they are sourced from my desktop and not a website. 
+2. Summarize your experience with these last few topics. What did you learn? What was difficult, easy, or still misunderstood? I enjoyed learning the coding tags. I still do not know for sure how to link and embed images properly when they are sourced from my desktop and not a website.
 3. An embedded image of your screenshot using its relative URL.
+![](images/ScreemshotUMT.EDU2008)
